--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
   <h2>Système de Pointage</h2>
   <form>
-[10-10 10:42] Chat: <label>Nom :</label>
+    <label>Noms :</label>
     <input type="text" name="nom">
     
     <label>ID Employé :</label>
@@ -73,7 +73,7 @@
 
   <h2>Demande de congé (RH)</h2>
   <form>
-    <label>Nom :</label>
+    <label>Noms :</label>
     <input type="text" name="nom">
     
     <label>Date de début :</label>
@@ -89,8 +89,8 @@
   </form>
 
   <h2>Contact</h2>
-  <p>Email : contact@digratech.com</p>
-  <p>Téléphone : +243 900 000 000</p>
+  <p>Email : mpoyodigra7@gmail.com</p>
+  <p>Téléphone : +243 991300952 </p>
 
   <div class="newsletter">
     <h3>DigraTech News - Octobre 2025</h3>
