--- a/index 2.html
+++ b/index 2.html
@@ -1,1 +1,54 @@
-https://mpoyo12.github.io/Site-DigraTech-/
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>Entreprise DigraTech</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      background-color: #f2f2f2;
+      padding: 20px;
+    }
+    img {
+      width: 200px;
+      border-radius: 10px;
+      margin-bottom: 20px;
+    }
+    ul {
+      list-style-type: none;
+      padding: 0;
+    }
+    li {
+      margin: 10px 0;
+    }
+    .btn {
+      background-color: #007BFF;
+      color: white;
+      padding: 10px 20px;
+      text-decoration: none;
+      border-radius: 5px;
+    }
+  </style>
+</head>
+<body>
+
+  <h1>Bienvenue chez DigraTech</h1>
+  <img src="IMG-20251010-WA0020.jpg" alt="Logo de l'entreprise">
+  <p>Nous sommes une entreprise spécialisée en informatique et solutions réseau.</p>
+
+  <h2>Nos Services</h2>
+  <ul>
+    <li>Développement de sites web</li>
+    <li>Maintenance informatique</li>
+    <li>Formations en informatique</li>
+  </ul>
+
+  <h2>Contact</h2>
+  <p>Email : mpoyodigra7@gmail.com </p>
+  <p>Téléphone : +243 991300952 </p>
+
+  <a href="mailto:contact@digratech.com" class="btn">Nous contacter</a>
+
+</body>
+    </html>
