--- a/code.html
+++ b/code.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-<head>
+<head>: html
+<link rel="manist" href="manifest.json">
   <meta charset="UTF-8">
   <title>Digra - Journal émotionnel</title>
   <style>
