--- a/code.html
+++ b/code.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>: html
-<link rel="manist" href="manifest.json">
+<link rel="manifest" href="manifest.json">
   <meta charset="UTF-8">
   <title>Digra - Journal émotionnel</title>
   <style>
