--- a/code.html
+++ b/code.html
@@ -32,13 +32,20 @@
       background-color: #0056b3;
     }
   </style>
-<script>
+  <script>
   if ('serviceWorker' in navigator) {
-    navigator.serviceWorker.register('sw/service-worker.js')
-[10-15 22:07] Chat: .then(() => console.log('Service Worker enregistré'))
-      .catch((error) => console.error('Erreur SW :', error));
+    navigator.serviceWorker.register('sw/service-worker.js').then(registration => {
+      console.log('Service Worker enregistré avec succès');
+
+      // Vérifie les mises à jour régulièrement
+      setInterval(() => {
+        registration.update();
+      }, 60 * 60 * 1000); // toutes les heures
+    }).catch(error => {
+      console.error('Erreur lors de l’enregistrement du Service Worker :', error);
+    });
   }
-      </script>
+</script>
 </head>
 <body>
   <h2>Bienvenue sur <b>Digra</b></h2>
